--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ sqlalchemy[asyncio]==2.0.23
 asyncpg==0.29.0
 httpx==0.25.2
 loguru==0.7.2
-pydantic==2.6.4
+pydantic==2.8.2
+pydantic-core==2.20.1
 pydantic-settings==2.2.1
 python-dotenv==1.0.0
 openai==1.3.7
