--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlmodel==0.0.14
 sqlalchemy[asyncio]==2.0.23
-asyncpg==0.29.0
+psycopg[binary]==3.1.19 
 httpx==0.25.2
 loguru==0.7.2
 pydantic==2.8.2
