--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlmodel==0.0.14
-sqlalchemy[asyncio]==2.0.23
-psycopg[binary]==3.1.19 
-httpx==0.25.2
+fastapi==0.112.2
+uvicorn[standard]==0.30.6
+
+sqlmodel==0.0.22
+sqlalchemy==2.0.31
+psycopg[binary]==3.2.9
+alembic==1.13.2
+
+httpx==0.27.2
 loguru==0.7.2
+
 pydantic==2.8.2
 pydantic-core==2.20.1
 pydantic-settings==2.2.1
-python-dotenv==1.0.0
+python-dotenv==1.0.1
+
 openai==1.3.7
-python-multipart==0.0.6
+python-multipart==0.0.9
