--- a/logging.ini
+++ b/logging.ini
@@ -30,19 +30,19 @@ propagate=0
 qualname=uvicorn.access
 
 [logger_sqlalchemy]
-level=WARNING
+level=ERROR
 handlers=console
 propagate=0
 qualname=sqlalchemy
 
 [logger_sqlalchemy.engine]
-level=WARNING
+level=ERROR
 handlers=console
 propagate=0
 qualname=sqlalchemy.engine
 
 [logger_sqlalchemy.pool]
-level=WARNING
+level=ERROR
 handlers=console
 propagate=0
 qualname=sqlalchemy.pool
