--- a/logging.ini
+++ b/logging.ini
@@ -60,5 +60,4 @@ formatter=appfmt
 args=(sys.stdout,)
 
 [formatter_appfmt]
-format=%(asctime)s | %(levelname)s | %(name)s | %(message)s
-datefmt=%H:%M:%S
+format=%(levelname)s | %(name)s | %(message)s
